# convolution

./: .gitattributes  .gitignore  CMakeLists.txt  Guidelines.md  Makefile  README.md  phase1  phase1.cpp
Theory and Latext/: Latext.tex
conv_rusty/: toeplitz.rs
include/: print.hpp  routine.hpp  toeplitz.hpp
rust_impl/: Cargo.toml
src/: CMakeLists.txt  lib.rs  phase1_legacy.cpp  print.cpp  routine.cpp  toeplitz.cpp
src/cpp_impl/src/: toeplitz.cpp
utils/: plot.py
utils/cpp_utils/: CMakeLists.txt  print.cpp  routine.cpp
